update theme playsit

--- a/pages/home/home.module.css
+++ b/pages/home/home.module.css
@@ -8,7 +8,6 @@
      left: 0;
      right: 0;
      position: relative;
-     z-index: -100;
      padding-bottom:200px;
 }
 
@@ -90,11 +89,13 @@
 .titleSoundTrend {
      font-size:17px;
      font-weight:500;
+     cursor: pointer;
 }
 
 .titleAttributeSoundTrend {
      font-size:13px;
      font-weight:450;
+     cursor: pointer;
 }
 
 .statisticalItem {
@@ -119,6 +120,7 @@
      display: flex;
      flex-direction: column;
      align-items: center;
+     cursor: pointer;
 }
 
 
@@ -151,6 +153,7 @@
      margin-top:40px;
      margin-right:20px;
      background-color: white;
+     cursor: pointer;
 }
 
 .imageItemNewSound img{
@@ -166,6 +169,7 @@
      font-size:15px;
      font-weight: 700;
      color:rgba(77, 77, 77, 0.877);
+     cursor: pointer;
 }
 
 @media (max-width:641px) {
@@ -215,6 +219,7 @@
      border:2px solid rgba(53, 53, 53, 0.712);
      border-radius:50%;
      margin-right:30px;
+     cursor: pointer;
 }
 
 .itemAttributeHot img{
@@ -231,6 +236,7 @@
      font-size:13px;
      font-weight:500;
      text-align: center;
+     cursor: pointer;
 }
 
 @media (max-width:1020px) {
