--- a/pages/layout.module.css
+++ b/pages/layout.module.css
@@ -465,6 +465,7 @@
      background: radial-gradient(circle, rgba(13,226,216,1) 0%, rgba(169,202,242,1) 100%);
      color:rgb(43, 43, 43);
      position: fixed;
+     z-index: 1000;
 }
 
 .SoundDisplay svg{
